# UniversalModels

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
tests/: conftest.py  test_dev_models.py  test_fastchat.py  test_hf_inference.py  test_interface.py  test_mock_tokenizer.py  test_openai_models.py  test_structure.py
universalmodels/: __init__.py  constants.py  fastchat.py  interface.py  logger.py  mock_model.py  mock_tokenizer.py
universalmodels/wrappers/: dev_model.py  hf_api_model.py  openai_api_model.py  wrapper_model.py
