[build-system]
requires = ["setuptools", "setuptools-scm", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "universalmodels"
version = "0.0.6"
authors = [
    {name = "Matthew Pisano", email = "matthewpisano14@gmail.com"},
]
description = "A series of wrappers to allow for multiple AI model sources to behave as huggingface transformers models"
readme = "README.md"
requires-python = ">=3.10"
keywords = ["ai", "transformers", "openai", "huggingface", "adapter"]
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 3 - Alpha",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
dependencies = [
    "transformers~=4.35",
    "torch~=2.1",
    "openai~=1.7",
    "huggingface-hub~=0.20.2"
]

[project.optional-dependencies]
fastchat = ["fschat[model_worker,webui]>=0.2.34"]
